<resources>
    <string name="app_name">DemoApp2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_nav_auth">Авторизация</string>
    <string name="btn_nav_list">Список БД</string>
    <string name="exit">Выход</string>
    <string name="menu_auth">Авторизация</string>
    <string name="menu_sorter">Сортировщик</string>
    <string name="menu_bd_list">Заметки</string>

    <string name="et_sorter_hint">Введите числа через пробел</string>
    <string name="btn_sorter_label">Сортировка</string>
    <string name="tv_sort_result">По возрастанию %1$s</string>
    <string name="tv_sort_result_desc">По убыванию %1$s</string>
    <string name="et_password">Пароль</string>
    <string name="ed_mail">E-mail</string>
    <string name="btn_login_label">Авторизация</string>
    <string name="btn_register_label">Регистрация</string>
    <string name="save">Сохранить</string>
    <string name="ed_save">Текст для БД</string>
    <string name="btn_delete">X</string>
    <string name="et_ud">Новый Текст</string>
    <string name="btn_update">Обновить</string>
    <string name="btn_ud_delete">Удалить</string>
    <string name="menu_gallery">Галлерея</string>
    <string name="tv_gallery">Галлерея</string>
    <string name="menu_gallery_modelu">Модуль галлеря</string>
    <string name="menu_galley">Галлерея</string>
    <string name="btn_upload_label">Загрузить картинку</string>
    <string name="back_btn">Назад</string>
    <string name="ed_comment">Комментарий</string>
    <string name="btn_send">Отправить</string>
</resources>
