<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routes"
    app:startDestination="@id/authPage">

    <fragment
        android:id="@+id/authPage"
        android:name="com.example.demoapp2.pages.AuthPage"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth_page" >
        <action
            android:id="@+id/action_authPage_to_listPage"
            app:destination="@id/listPage" />
        <action
            android:id="@+id/action_authPage_to_sorterPage"
            app:destination="@id/sorterPage" />
        <action
            android:id="@+id/action_authPage_to_gridPage"
            app:destination="@id/gridPage" />
        <action
            android:id="@+id/action_authPage_to_gallery_module"
            app:destination="@id/gallery_module" />
    </fragment>
    <fragment
        android:id="@+id/listPage"
        android:name="com.example.demoapp2.pages.ListPage"
        android:label="@string/menu_bd_list"
        tools:layout="@layout/fragment_list_page" />
    <fragment
        android:id="@+id/sorterPage"
        android:name="com.example.demoapp2.pages.SorterPage"
        android:label="@string/menu_sorter"
        tools:layout="@layout/fragment_sorter_page" />
        <fragment
        android:id="@+id/gridPage"
        android:name="com.example.demoapp2.pages.GridPage"
        android:label="@string/menu_galley"
        tools:layout="@layout/fragment_grid_page" />
    <fragment
        android:id="@+id/gallery_module"
        android:name="com.example.demoapp2.gallery_module.gallery_module"
        android:label="@string/menu_gallery_modelu"
        tools:layout="@layout/fragment_gallery_module" />
</navigation>