<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.SorterPage">


    <EditText
        android:id="@+id/et_sorter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_sorter_hint"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_sorter"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sorter_label" />

    <TextView
        android:id="@+id/tv_sort_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/tv_sort_result"
        android:textSize="24dp"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tv_sort_result_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/tv_sort_result_desc"
        android:textSize="24dp"
        tools:visibility="gone" />

</FrameLayout>