<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.AuthPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_nav_auth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="419dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/btn_nav_auth"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_nav_list"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginBottom="181dp"
            android:text="@string/btn_nav_list"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="79dp"
            android:ems="10"
            android:hint="@string/ed_mail"
            android:padding="5dp"/>

        <EditText
            android:hint="@string/et_password"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:ems="10"
            android:padding="5dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="-4dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginTop="428dp"
            android:layout_marginRight="4dp"
            android:text="@string/btn_login_label" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="-5dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="497dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_register_label" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="278dp"
            android:layout_marginEnd="183dp"
            android:layout_marginRight="183dp"
            android:visibility="visible"/>
    </RelativeLayout>

</FrameLayout>